agregar un parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Titulo inicial</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque debitis ex maxime ducimus, magnam cumque corrupti saepe ratione eum quae? Nesciunt pariatur aspernatur eaque voluptatum quam laboriosam adipisci minima ullam.</p>
 </body>
 </html>
