--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Titulo inicial</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque debitis ex maxime ducimus, magnam cumque corrupti saepe ratione eum quae? Nesciunt pariatur aspernatur eaque voluptatum quam laboriosam adipisci minima ullam.</p>
+    <h2>Subtitulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum delectus id, quisquam culpa earum assumenda corrupti atque corporis. Nemo animi, quis ea explicabo debitis inventore provident. Aperiam reiciendis veniam non!</p>
 </body>
 </html>
